--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
 /note.md
 */__pycache__/
+ckbc-demo/
+*.pickle
 *.pyc
 *.ipynb
 !aggregate_relation_pr_curve.ipynb
-*.png
 *.gz
 *.csv
 *.txt
 *.json
 *.zip
 *.bin
+curves/
+(old)curves/
+(old)outputs/
+0419_tune_weight/
 data/lama
 !data/relation_info*.json
 !data/lpaqa/*/*.txt
