update README file and requirement file

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ nltk==3.4.5
 openai==0.16.0
 thefuzz==0.19.0
 prettytable==3.2.0
-flask==1.1.2
+flask>=2.1.0
+dask>=2.6.1
+dash_bootstrap_components>=1.2.1
+thefuzz>=0.19.0
