update demo beam search and ranking algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# local scripts
+*.zip
+split.py
+get_rep.py
+collect.py
+ent_tuples.json
+rebuttal.sh
+cn.json
+relation_info/human*.json
